Fixed error processing around JMS Destination admin commands
- errors were swallowed, so I saw just HTTP 500 without any info neither
  in response nor in server.log